As a user I want to edit any of the events to update the details. [Delivers #183639060]
