# backend/swagger.yaml
@@ -151,16 +151,74 @@ paths:
                     $ref: "#components/schemas/Event"
               example:
                   - _id: 635c381cc8c825565c56c291
+                    title: Jaanituli
                     image: https://img.freepik.com/free-vector/silhouettes-rock-concert_1048-4815.jpg
                     location: Tallinn
                     time: '2023-12-25T00:00:00.000Z'
                     authorId: 635ae70f46211d0b55c59f22
                   - _id: 635c381cc8c825565c56c291
+                    title: Kulutuli
                     image: https://img.freepik.com/free-vector/silhouettes-rock-concert_1048-4815.jpg
                     location: Koeru
                     time: '2023-12-25T00:00:00.000Z'
                     authorId: 635ae70f46211d0b55c59f22
           description: Returns a list of users Events
+        "500":
+          description: Error
+  /events/edit/{id}:
+    patch:
+      tags:
+        - events
+      description: Edit event
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: ID of the event that will be edited
+          example: 635c381cc8c825565c56c291
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                image:
+                  type: string
+                location:
+                  type: string
+                time:
+                  type: date
+              example:
+                title: Jaanituli
+                image: https://img.freepik.com/free-vector/silhouettes-rock-concert_1048-4815.jpg
+                location: Tartu
+                time: "2023-06-23T18:30:00"
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+                  $ref: "#components/schemas/Event"
+              example:
+                  _id: 635c381cc8c825565c56c291
+                  title: Uus Jaanituli
+                  image: https://img.freepik.com/free-vector/silhouettes-rock-concert_1048-4815.jpg
+                  location: Tartu
+                  time: '2023-05-23T08:30:00.000Z'
+                  authorId: 635ae70f46211d0b55c59f22
+          description: Returns the updated event
+        "400":
+          description: One or more required fields empty or malformed
+        "401":
+          description: No authorization token was found
         "500":
           description: Error
 components:
